fix layout bug on mobile

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ button:hover {
 }
 
 header {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-image: url('./images/banner.svg');
     background-repeat: no-repeat;
@@ -175,8 +175,16 @@ footer a:hover {
 }
 
 @media only screen and (max-width: 980px) {
+    html {
+        overflow-x: hidden;
+    }
+
     nav {
         padding: 60px 30px;
+    }
+
+    nav h2 {
+        font-size: 50px;
     }
 
     nav ul {
@@ -211,6 +219,7 @@ footer a:hover {
     }
 
     #projects {
+        font-size: 50px;
         text-align: center;
         padding: 80px 30px;
         flex-direction: column;
@@ -218,10 +227,12 @@ footer a:hover {
 
     .project1 {
         margin: 0;
+        padding: 20px;
     }
 
     .project3 {
         margin: 0;
+        padding: 20px;
     }
 
     footer {
